trunk/tests/jastadd/negative/name_errors/L1/2_VarCircularity.ob
MODULE TestModule;
	VAR a : a;
END TestModule.
